test/libyul/yulSyntaxTests/invalid/dup_disallowed.yul
{
    dup0()
    dup1()
    dup2()
    dup3()
    dup4()
    dup5()
    dup6()
    dup7()
    dup8()
    dup9()
    dup10()
    dup11()
    dup12()
    dup13()
    dup14()
    dup15()
    dup16()
    dup32()
}
// ----
// DeclarationError 4619: (6-10): Function not found.
// DeclarationError 4619: (17-21): Function not found.
// DeclarationError 4619: (28-32): Function not found.
// DeclarationError 4619: (39-43): Function not found.
// DeclarationError 4619: (50-54): Function not found.
// DeclarationError 4619: (61-65): Function not found.
// DeclarationError 4619: (72-76): Function not found.
// DeclarationError 4619: (83-87): Function not found.
// DeclarationError 4619: (94-98): Function not found.
// DeclarationError 4619: (105-109): Function not found.
// DeclarationError 4619: (116-121): Function not found.
// DeclarationError 4619: (128-133): Function not found.
// DeclarationError 4619: (140-145): Function not found.
// DeclarationError 4619: (152-157): Function not found.
// DeclarationError 4619: (164-169): Function not found.
// DeclarationError 4619: (176-181): Function not found.
// DeclarationError 4619: (188-193): Function not found.
// DeclarationError 4619: (200-205): Function not found.
